--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
+    ext{
+        kotlin_version = "1.4.10"
+        gradleVersion = '3.3.1'
+        dataBindingCompilerVersion = gradleVersion // Always need to be the same.
+    }
     repositories {
         google()
         mavenCentral()
